go-vigator/frontend/src/App.css
* {
  margin: 0px;
  padding: 0px;
  /* background-color: ; */
}

input:focus {
  border-style: none;
}

body {
  height: 100vh;
  padding: 0;
  margin: 0;
  overflow: hidden;
}


.container {
  width: 100vw;
  height: 100vh;
  background-color: #191919;
}

.header {
  background-color: #191919;
  padding: 10px;
  display: flex;
}


.fbbuttons {
  width: 7%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.fbbuttons>button {
  width: 45%;
  height: 100%;
  margin: 0%;
  background-color: #272727;
  border-style: none;
  border-radius: 7px;
  color: white;

}

.path {
  width: 82%;
  overflow-x: hidden;
}

.path>input {
  width: 95%;
  background-color: #272727;
  color: rgb(124, 119, 119);
  height: 2.3em;
  border-style: none;
  padding: auto;
  padding-left: 15px;
  border-radius: 7px;
}

.path>input:focus {
  outline: none;
}

.dropdown {
  width: 11%;
  border-radius: 5px;
}

.dropdown>input {
  background: #272727;
  border-style: none;
  color: white;
  height: 100%;
  margin: 0;
  padding-left: 9px;
  text-align: left;
  border-radius: 5px;
}



.dropdown>select {
  width: 90%;
  height: 100%;
  background-color: #2f2a2f;

}

.dropdown>select>option {
  background-color: #2f2a2f;
}

select {
  background-color: black !important;
}

.content {
  /* height: 500px; */
  height: 100%;
  display: flex;
  flex-direction: row;
}



ul {
  list-style: none;
  padding: 0;
  margin: 0;
  padding-left: 8px;
  padding-top: 9px;
}

.left-panel {
  width: 200px;
  font-size: small;
  background-color: #191919;
  overflow-x: auto;
  padding-bottom: 50px;
  border-right: 1px solid rgba(255, 255, 255, 0.623);
}

.mainFolders>li {
  display: flex;
  align-items: center;
  width: 100%;
  margin: 7px 0px;
  /* background-color: aliceblue; */
  cursor: pointer;
}


.FolderInfo {
  display: flex;
  font-size: smaller;
  justify-content: left;
  column-gap: 15px;
}


.mainFolders :hover {
  /* background-color: #272727; */
}

.leftPanelIcon {
  margin: auto;
  width: 20px;
  margin-left: 5px;
  margin-right: 15px;
}

.right-panel {
  font-size: 14px;
  padding-left: 15px;
  width: 86%;
  background-color: #191919;
  padding-bottom: 50px;
}

.file-list {
  font-size: 14px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: left;
  row-gap: 25px;
  column-gap: 10px;
  height: 100%;
  overflow-y: scroll;
  align-content: flex-start;
}

.card {
  display: flex;
  flex-direction: column;
  max-width: 100px;
  justify-content: center;
  align-items: center;
  padding: 12px;
  cursor: pointer;
  /* background-color: aliceblue; */
}

.card:hover {
  background-color: #272727;
  border-radius: 5px;
}

.rightPanelIcon {
  width: 65px;
  opacity: 0.95;
}

a {
  text-decoration: none;
  color: white;
}

.breadcrumb {
  margin-bottom: 10px;
}

.file-list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.file-list li {
  padding: 5px;
}

.Filenames {
  inline-size: 93px;
  overflow-wrap: break-word;
  margin-top: 8px;
}


* {
  padding: 0;
  margin: 0;
}

.contextmenu {
  position: absolute;
  width: 205px;
  display: flex;
  flex-direction: column;
  border-radius: 1rem;
  animation: open 0.3s;
  transform-origin: top left;
  background: #272727c2;
  backdrop-filter: saturate(103%) blur(5px);
  overflow: hidden;
}

.contextmenu button {
  background: none;
  padding: 8px;
  border: none;
  text-align: left;
  cursor: pointer;
  color: #ffffff;
  border-bottom: 1px solid #2e2d2d;
}

.contextmenu button:hover {
  background: rgba(167, 167, 167, 0.29);
  backdrop-filter: saturate(103%) blur(5px);
  /* border-radius: 0.5rem; */
}


.contextmenu i {
  margin-right: 1rem;
}

@keyframes open {
  from {
    transform: scale(0);
  }

  to {
    transform: scale(1);
  }
}

.dialogModal {
  margin: auto;
}

.dialogModal>form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

}


.dialogModal>form>input {
  padding: 5px 15px;
}

.labelModal {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin-bottom: 17px;
}

.dialogModal {
  padding: 2% 3%;
  border-style: none;
  border-radius: 7px;
  background: rgba(0, 0, 0, 0.8);
  backdrop-filter: saturate(103%) blur(5px);
  color: #ffffff;
}


::-webkit-scrollbar {
  width: 7px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px rgb(0, 0, 0);
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #2c2c2c;
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #2c2c2c;
}

